Fix heading levels

--- a/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
+++ b/notebooks/photometry/01.04.02-image-segmentation-XDF.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae3f0157-65cf-494b-a2fb-557a361e6ca8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "4a539fa2-f180-4b88-a620-da47c6af8270",
    "metadata": {},
@@ -47,6 +39,7 @@
     "from photutils.centroids import centroid_2dg\n",
     "from photutils.detection import find_peaks, DAOStarFinder, IRAFStarFinder\n",
     "from photutils.segmentation import detect_sources, make_2dgaussian_kernel, SourceCatalog\n",
+    "from photutils.utils import make_random_cmap\n",
     "\n",
     "# Show plots in the notebook\n",
     "%matplotlib inline"
@@ -94,7 +87,7 @@
     "\n",
     "You might have noticed that, in the previous source detection algorithms, large and extended sources are often incorrectly identified as more than one source. Segmentation would label all the pixels within a large galaxy as belonging to the same object, and would allow the user to then measure the photometry, centroid, and morphology of the entire object at once.\n",
     "\n",
-    "#### Creating a `SegmentationImage`\n",
+    "## Creating a `SegmentationImage`\n",
     "\n",
     "In `photutils`, image segmentation maps are created using the threshold method in the `detect_sources()` function. This method identifies all of the objects in the data that have signals above a determined **`threshold`** (usually defined as a multiple of the standard deviation) and that have more than a defined number of adjoining pixels, **`npixels`**. The data can also optionally be smoothed using a kernel, **`filter_kernel`**, before applying the threshold cut.\n",
     "\n",
@@ -114,16 +107,6 @@
     "where all of the pixels labeled `1` belong to the first source, all those labeled `2` belong to the second, and all null pixels are designated to be background.\n",
     "\n",
     "Let's see what the segmentation map for our XDF data will look like."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fdc588d5-f41b-4576-8585-c917940472e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from photutils.utils import make_random_cmap"
    ]
   },
   {
@@ -259,7 +242,7 @@
    "id": "3e15e7d8-3aa9-4b75-ab03-88d3d6461eb5",
    "metadata": {},
    "source": [
-    "#### Analyzing `source_properties`\n",
+    "## Analyzing `source_properties`\n",
     "\n",
     "Once we have a `SegmentationImage` object, `photutils` provides many powerful tools to manipulate and analyze the identified objects. \n",
     "\n",
@@ -286,7 +269,7 @@
    "id": "350de88c-eaa6-46d0-a964-d873d77cd297",
    "metadata": {},
    "source": [
-    "#### Creating apertures from segmentation data\n",
+    "### Creating apertures from segmentation data\n",
     "\n",
     "We can use this information to create isophotal ellipses for each identified source. These ellipses can also later be used as photometric apertures."
    ]
@@ -439,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
